# pygraph

./: .gitignore  .gitmessage  README.md  pyproject.toml
docs/: formatting.md  quality-tools-reference.md
scripts/: __init__.py  check.py
src/pygraph/: __init__.py  containers.py  edge.py  exceptions.py  graph.py  protocols.py  representations.py  tree.py
tests/: __init__.py  test_config.py  test_containers.py  test_edge.py  test_exceptions.py  test_graph_properties.py  test_graph_unit.py  test_hypothesis_config.py  test_protocols.py  test_representations.py  test_tree_properties.py  test_tree_unit.py
