[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygraph"
version = "0.1.0"
description = "A Python graph library with efficient data structures and common graph algorithms"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "Apache-2.0"}
authors = [
    {name = "Graph Library Contributors"}
]
keywords = ["graph", "tree", "algorithms", "data-structures"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.92.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "pylint>=3.0.0",
]

[project.scripts]
check = "scripts.check:main"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["pygraph*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "property: Property-based tests using Hypothesis",
    "unit: Unit tests for specific functionality",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 120
target-version = ["py314"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
preview = false
skip-string-normalization = false
skip-magic-trailing-comma = false

[tool.isort]
profile = "black"
line_length = 120
py_version = 314
src_paths = ["src", "tests"]
known_first_party = ["pygraph"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
split_on_trailing_comma = true
skip_gitignore = true

[tool.hypothesis]
# Minimum number of examples to generate for each property test
max_examples = 100
# Use deterministic mode for reproducible test runs
derandomize = false
# Print example statistics after each test
verbosity = "normal"

[tool.pylint.main]
# Python version to target
py-version = "3.14"

# Files or directories to be skipped
ignore = ["venv", ".venv", "build", "dist", ".git", ".hypothesis", ".pytest_cache", "__pycache__"]

# Use multiple processes to speed up Pylint
jobs = 0  # Auto-detect number of processors

# Pickle collected data for later comparisons
persistent = true

# Discover python modules and packages in the file system subtree
recursive = true

[tool.pylint.messages_control]
# Disable specific warnings that may not be relevant for this project
disable = [
    "missing-module-docstring",  # Not all modules need docstrings
    "missing-class-docstring",   # Will be enabled for public classes only
    "missing-function-docstring", # Will be enabled for public functions only
    "too-few-public-methods",    # Dataclasses and protocols may have few methods
    "too-many-arguments",        # Graph algorithms may need many parameters
    "too-many-instance-attributes", # Graph classes may have many attributes
    "too-many-locals",           # Complex algorithms may need many local variables
    "too-many-branches",         # Graph algorithms may have complex branching
    "too-many-statements",       # Graph algorithms may be lengthy
    "fixme",                     # Allow TODO comments during development
]

[tool.pylint.format]
# Maximum number of characters on a single line
max-line-length = 120

# Maximum number of lines in a module
max-module-lines = 1000

# String used as indentation unit
indent-string = "    "

# Expected format of line ending
expected-line-ending-format = "LF"

[tool.pylint.basic]
# Good variable names which should always be accepted
good-names = ["i", "j", "k", "v", "u", "e", "x", "y", "z", "V", "T", "_"]

# Regular expression matching correct function names
function-rgx = "[a-z_][a-z0-9_]{2,50}$"

# Regular expression matching correct variable names
variable-rgx = "[a-z_][a-z0-9_]{1,30}$"

# Regular expression matching correct constant names
const-rgx = "(([A-Z_][A-Z0-9_]*)|(__.*__))$"

# Regular expression matching correct class names
class-rgx = "[A-Z_][a-zA-Z0-9]+$"

[tool.pylint.design]
# Maximum number of arguments for function / method
max-args = 8

# Maximum number of attributes for a class
max-attributes = 12

# Maximum number of boolean expressions in an if statement
max-bool-expr = 5

# Maximum number of branch for function / method body
max-branches = 15

# Maximum number of locals for function / method body
max-locals = 20

# Maximum number of parents for a class
max-parents = 7

# Maximum number of public methods for a class
max-public-methods = 25

# Maximum number of return / yield for function / method body
max-returns = 6

# Maximum number of statements in function / method body
max-statements = 60

# Minimum number of public methods for a class
min-public-methods = 0

[tool.pylint.similarities]
# Minimum lines number of a similarity
min-similarity-lines = 8

# Ignore comments when computing similarities
ignore-comments = true

# Ignore docstrings when computing similarities
ignore-docstrings = true

# Ignore imports when computing similarities
ignore-imports = true

[tool.pylint.typecheck]
# List of decorators that produce context managers
contextmanager-decorators = ["contextlib.contextmanager"]

# List of members which are set dynamically and missed by pylint inference
generated-members = []

# Tells whether missing members accessed in mixin class should be ignored
ignore-mixin-members = true

# Tells whether to warn about missing members when the owner of the attribute is inferred to be None
ignore-none = true

# This flag controls whether pylint should warn about no-member and similar checks whenever an opaque object is returned when inferring
ignore-on-opaque-inference = true

[tool.pylint.variables]
# Tells whether we should check for unused import in __init__ files
init-import = false

# A regular expression matching the name of dummy variables
dummy-variables-rgx = "_+$|(_[a-zA-Z0-9_]*[a-zA-Z0-9]+?$)|dummy|^ignored_|^unused_"

[tool.pylint.imports]
# Allow wildcard imports from modules that define __all__
allow-wildcard-with-all = false

# Deprecated modules which should not be used
deprecated-modules = []

[tool.pylint.exceptions]
# Exceptions that will emit a warning when caught
overgeneral-exceptions = ["builtins.BaseException", "builtins.Exception"]
