[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygraph"
version = "0.1.0"
description = "A Python graph library with efficient data structures and common graph algorithms"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "Apache-2.0"}
authors = [
    {name = "Graph Library Contributors"}
]
keywords = ["graph", "tree", "algorithms", "data-structures"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "hypothesis>=6.150.0",
    "black>=25.0.0",
    "prospector[with_everything]>=1.17.3",
    "isort>=7.0.0",
    "mypy>=1.19.0",
    "bandit>=1.9.0",
    "pyright>=1.1.0",
    "ruff>=0.14.0",
    "vulture>=2.14.0",
    "pyroma>=5.0.0",
]

[project.scripts]
check = "scripts.check:main"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["pygraph*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "property: Property-based tests using Hypothesis",
    "unit: Unit tests for specific functionality",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 120
target-version = ["py314"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
preview = false
skip-string-normalization = false
skip-magic-trailing-comma = false

[tool.isort]
profile = "black"
line_length = 120
py_version = 314
src_paths = ["src", "tests"]
known_first_party = ["pygraph"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
split_on_trailing_comma = true
skip_gitignore = true

[tool.hypothesis]
# Minimum number of examples to generate for each property test
max_examples = 100
# Use deterministic mode for reproducible test runs
derandomize = false
# Print example statistics after each test
verbosity = "normal"

# =============================================================================
# Prospector Configuration
# =============================================================================
# Prospector is a comprehensive code quality tool that runs multiple linters
# and analysis tools in a coordinated manner with unified reporting.

[tool.prospector]
# Strictness level: veryhigh, high, medium, low, verylow
strictness = "high"

# Enable warnings for test code
test-warnings = true

# Disable documentation warnings (handled separately)
doc-warnings = false

# Disable member warnings (can be noisy for dynamic attributes)
member-warnings = false

# Maximum line length (consistent with Black and other tools)
max-line-length = 120

# Output format: grouped, json, yaml, text
output-format = "grouped"

# Paths to ignore during analysis
ignore-paths = [
    "venv",
    ".venv",
    "build",
    "dist",
    ".git",
    ".hypothesis",
    ".pytest_cache",
    "__pycache__",
    "htmlcov",
    "*.egg-info",
    "scripts",
]

# Patterns to ignore (regex)
ignore-patterns = [
    "(^|/)test_.*\\.py$",
    "(^|/)scripts/",
]

# -----------------------------------------------------------------------------
# Pylint Configuration (via Prospector)
# -----------------------------------------------------------------------------
# Pylint provides comprehensive code quality and style checking
# Options explained:
#   max-line-length: Maximum number of characters on a single line
#   max-args: Maximum number of arguments for function/method
#   max-attributes: Maximum number of attributes for a class
#   max-branches: Maximum number of branches for function/method body
#   max-locals: Maximum number of locals for function/method body
#   max-statements: Maximum number of statements in function/method body
#   min-public-methods: Minimum number of public methods for a class
#   good-names: Variable names which should always be accepted

[tool.prospector.pylint]
run = true
# Disable specific warnings that may not be relevant for this project
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "fixme",
    "wrong-import-position",  # Allow imports after TYPE_CHECKING block
    "used-before-assignment", # False positive with TYPE_CHECKING imports
]

[tool.prospector.pylint.options]
max-line-length = 120
max-args = 8
max-attributes = 12
max-branches = 15
max-locals = 20
max-statements = 60
min-public-methods = 0
good-names = ["i", "j", "k", "v", "u", "e", "x", "y", "z", "V", "T", "_"]

# -----------------------------------------------------------------------------
# Pyflakes Configuration (via Prospector)
# -----------------------------------------------------------------------------
# Pyflakes provides fast error detection without style checking

[tool.prospector.pyflakes]
run = true

# -----------------------------------------------------------------------------
# McCabe Complexity Configuration (via Prospector)
# -----------------------------------------------------------------------------
# McCabe Complexity Configuration (via Prospector)
# -----------------------------------------------------------------------------
# McCabe checks cyclomatic complexity of functions
# max-complexity: Maximum complexity score before warning

[tool.prospector.mccabe]
run = true

[tool.prospector.mccabe.options]
max-complexity = 15

# -----------------------------------------------------------------------------
# Pycodestyle Configuration (via Prospector)
# -----------------------------------------------------------------------------
# Pycodestyle checks PEP 8 style compliance
# Ignore codes: E203 (whitespace before ':'), W503 (line break before binary operator)
# These are ignored for Black compatibility

[tool.prospector.pycodestyle]
run = true

[tool.prospector.pycodestyle.options]
max-line-length = 120
ignore = ["E203", "W503"]

# -----------------------------------------------------------------------------
# Pydocstyle Configuration (via Prospector)
# -----------------------------------------------------------------------------
# Pydocstyle checks docstring conventions

[tool.prospector.pydocstyle]
# Disabled to avoid duplicate docstring checks with pylint
run = false

# -----------------------------------------------------------------------------
# Pyroma Configuration (via Prospector)
# -----------------------------------------------------------------------------
# Pyroma checks package quality and metadata

[tool.prospector.pyroma]
run = true

# -----------------------------------------------------------------------------
# Vulture Configuration (via Prospector)
# -----------------------------------------------------------------------------
# Vulture finds unused code

[tool.prospector.vulture]
run = true

# -----------------------------------------------------------------------------
# Mypy Configuration (via Prospector)
# -----------------------------------------------------------------------------
# Mypy provides static type checking (also configured separately below)

[tool.prospector.mypy]
# Disabled in prospector due to I/O errors
# mypy is run separately in check script
run = false

# -----------------------------------------------------------------------------
# Bandit Configuration (via Prospector)
# -----------------------------------------------------------------------------
# Bandit scans for security vulnerabilities (also configured separately below)

[tool.prospector.bandit]
run = true

[tool.prospector.bandit.options]
exclude = ["scripts"]

# =============================================================================
# Mypy Configuration (Standalone)
# =============================================================================
# Mypy is a static type checker for Python
# This configuration is used when running mypy standalone or via prospector

[tool.mypy]
# Python version to target
python_version = "3.14"

# Warn if a function returns Any
warn_return_any = true

# Warn about unused [mypy-...] config sections
warn_unused_configs = true

# Don't require type annotations for all functions (too strict for now)
disallow_untyped_defs = false

# Don't require complete type annotations (too strict for now)
disallow_incomplete_defs = false

# Check the body of functions without type annotations
check_untyped_defs = true

# Don't require type annotations for decorators
disallow_untyped_decorators = false

# Disallow implicit Optional (e.g., def f(x: int = None) should be def f(x: int | None = None))
no_implicit_optional = true

# Warn about redundant casts
warn_redundant_casts = true

# Warn about unused '# type: ignore' comments
warn_unused_ignores = true

# Warn about functions that don't return a value
warn_no_return = true

# Warn about unreachable code
warn_unreachable = true

# Use strict equality checks
strict_equality = true

# Don't error on missing imports (third-party libraries may not have stubs)
ignore_missing_imports = true

# Override settings for test files
[[tool.mypy.overrides]]
module = "tests.*"
# Don't require type annotations in tests
disallow_untyped_defs = false

# =============================================================================
# Pyright Configuration
# =============================================================================
# Pyright is Microsoft's static type checker for Python
# It catches different issues than mypy and provides additional type checking

[tool.pyright]
# Python version to target
pythonVersion = "3.14"

# Type checking mode: off, basic, standard, strict
typeCheckingMode = "basic"

# Report missing imports
reportMissingImports = true

# Don't report missing type stubs (third-party libraries may not have them)
reportMissingTypeStubs = false

# Report unused imports
reportUnusedImport = true

# Report unused classes
reportUnusedClass = true

# Report unused functions
reportUnusedFunction = true

# Report unused variables
reportUnusedVariable = true

# Report duplicate imports
reportDuplicateImport = true

# Don't require return statements in protocol methods (docstrings are sufficient)
reportReturnType = false

# Paths to exclude from type checking
exclude = [
    "**/node_modules",
    "**/__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
]

# =============================================================================
# Ruff Configuration
# =============================================================================
# Ruff is an extremely fast Python linter written in Rust
# It replaces multiple tools: pyflakes, pycodestyle, isort checks, and more

[tool.ruff]
# Maximum line length (consistent with Black)
line-length = 120

# Python version to target
target-version = "py314"

# Rule categories to enable
lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]

# Rules to ignore
lint.ignore = [
    "E203", # whitespace before ':' (conflicts with Black)
    "E501", # line too long (handled by Black)
]

# Per-file rule ignores
[tool.ruff.lint.per-file-ignores]
# Allow assert statements in tests
"tests/*" = ["S101"]

# =============================================================================
# Bandit Configuration
# =============================================================================
# Bandit is a security linter that scans for common security issues

[tool.bandit]
# Directories to exclude from scanning
exclude_dirs = ["tests", ".venv", "venv", "build", "scripts"]

# Security checks to skip
skips = ["B101"]  # Skip assert_used check (asserts are fine in tests)
